sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: not found: value or
  while (ecart > 1 )or ( aBouger == true){
                    ^